K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: springboot-ingress
  namespace: springboot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 80
